Fix admin container overlap

--- a/style.css
+++ b/style.css
@@ -86,6 +86,16 @@ input {
   min-width: 0;
 }
 
+.test>label:hover,
+.radio-option>label:hover,
+input[type='radio']:hover  {
+  cursor: pointer;
+}
+
+.date:hover {
+  cursor: text;
+}
+
 
 
 input[type='radio'] {
@@ -195,9 +205,15 @@ button {
 button:hover {
   background-color: rgb(82, 109, 228);
   color: white;
-  transition-duration: .3s;
-  transition-timing-function: ease-in-out;
+  transition-duration: .2s;
+  cursor: pointer;
+  transition-timing-function: ease-out;
 }
+
+select:hover {
+  cursor: pointer;
+}
+
 
 .admin-container {
   display: flex;
@@ -221,6 +237,7 @@ button:hover {
 
   .form-a {
     bottom: -1000px;
+    z-index: -10;
   }
 
   .bundler {
